# transliteration

./: pyproject.toml
transliteration/: amor.py  cyrtrans.py  deep.py  from-command-line.py  greek-to-english.py  greek-to-latin.py  greek.txt  oi.py  oxi.py  poliglot.py  proposta.py  sera.py  teste.py
